--- a/templates/account/registration.html
+++ b/templates/account/registration.html
@@ -24,6 +24,7 @@
             <p>With registration with us new world of fashion, fantastic discounts and much more opens to you! The whole process will not take you more than a minute!</p>
             <p class="text-muted">If you have any questions, please feel free to <a href="contact.html">contact us</a>, our customer service center is working for you 24/7.</p>
             <hr>
+            {% include 'alert/_alert.html' %}
             <form action="{% url 'register' %}" method="POST">
               {% csrf_token %}
               <div class="form-group">
