--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,11 @@
       <script src="{% static 'vendor/owl.carousel2/owl.carousel.min.js' %}"></script>
       <script src="{% static 'vendor/owl.carousel2.thumbs/owl.carousel2.thumbs.min.js' %}"></script>
       <script src="{% static 'js/front.js' %}"></script>
+      <script src="{% static 'vendor1/jquery.cookie/jquery.cookie.js' %}"> </script>
+      <script src="{% static 'js/front.js' %}"></script>
       <script>
+
+      
         // ------------------------------------------------------- //
         //   Inject SVG Sprite - 
         //   see more here 
