--- a/templates/partials/_head.html
+++ b/templates/partials/_head.html
@@ -26,6 +26,16 @@
   <link rel="stylesheet" href="{% static 'css/custom.css' %}">
   <!-- Favicon-->
   <link rel="shortcut icon" href="{% static 'img/favicon.png' %}">
+
+   <!-- Font Awesome CSS-->
+   <link rel="stylesheet" href="{% static 'vendor1/font-awesome/css/font-awesome.min.css' %}">
+   <!-- Google fonts - Roboto -->
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700">
+   <!-- theme stylesheet-->
+   <link rel="stylesheet" href="{% static 'css1/style.default.css'%}" id="theme-stylesheet">
+    <!-- Custom stylesheet - for your changes-->
+    <link rel="stylesheet" href="{% static  'css1/custom.css' %}">
+
   <!-- Tweaks for older IEs--><!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
